fb auth service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,17 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": [
+      "firebase",
+      "hammerjs"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
