--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/lodash": "^4.14.61",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.7.2",
+    "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.1",
     "zone.js": "^0.7.6"
