--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.0.0",
     "@types/lodash": "^4.14.61",
     "angularfire2": "^2.0.0-beta.8",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "firebase": "^3.7.2",
     "lodash": "^4.17.4",
