--- a/package.json
+++ b/package.json
@@ -24,32 +24,31 @@
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/lodash": "^4.14.61",
-    "angularfire2": "^2.0.0-beta.8",
-    "bootstrap": "^4.0.0-alpha.6",
+    "angularfire2": "^4.0.0-rc.0",
     "core-js": "^2.4.1",
     "firebase": "^3.7.2",
     "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.1",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
+    "@angular/cli": "^1.0.2",
     "@angular/compiler-cli": ">=4.0.0-beta <5.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "@types/jasmine": "2.5.47",
+    "@types/node": "~7.0.18",
+    "codelyzer": "~3.0.1",
+    "jasmine-core": "~2.6.1",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.1.0"
+    "ts-node": "~3.0.4",
+    "tslint": "~5.2.0",
+    "typescript": "~2.3.2"
   }
 }
