--- a/package.json
+++ b/package.json
@@ -12,43 +12,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@types/lodash": "^4.14.61",
-    "angularfire2": "^4.0.0-rc.0",
+    "@angular/animations": "^4.2.4",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/platform-server": "^4.2.4",
+    "@angular/router": "^4.2.4",
+    "@types/lodash": "^4.14.67",
+    "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
-    "firebase": "^3.7.2",
+    "firebase": "^4.1.3",
     "lodash": "^4.17.4",
-    "rxjs": "^5.1.0",
-    "typescript": "^2.2.1",
-    "zone.js": "^0.8.10"
+    "rxjs": "^5.4.1",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.2",
-    "@angular/compiler-cli": ">=4.0.0-beta <5.0.0",
-    "@types/jasmine": "2.5.47",
-    "@types/node": "~7.0.18",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.1",
-    "jasmine-spec-reporter": "~4.1.0",
+    "@angular/cli": "^1.1.3",
+    "@angular/compiler-cli": "^4.2.4",
+    "@types/jasmine": "2.5.53",
+    "@types/node": "~8.0.4",
+    "codelyzer": "~3.1.1",
+    "jasmine-core": "~2.6.4",
+    "jasmine-spec-reporter": "~4.1.1",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.2.0",
-    "typescript": "~2.3.2"
+    "protractor": "~5.1.2",
+    "ts-node": "~3.1.0",
+    "tslint": "~5.4.3",
+    "typescript": "=2.3.4"
   }
 }
