lint: minor code style change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,13 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "baseUrl": ".",
+    "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "types": [
-      "firebase",
-      "hammerjs"
-    ],
     "typeRoots": [
       "node_modules/@types"
     ],
