--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/platform-server": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^4.3.1",
+    "@angular/common": "^4.3.1",
+    "@angular/compiler": "^4.3.1",
+    "@angular/core": "^4.3.1",
+    "@angular/forms": "^4.3.1",
+    "@angular/http": "^4.3.1",
+    "@angular/platform-browser": "^4.3.1",
+    "@angular/platform-browser-dynamic": "^4.3.1",
+    "@angular/platform-server": "^4.3.1",
+    "@angular/router": "^4.3.1",
     "@types/lodash": "^4.14.67",
-    "angularfire2": "^4.0.0-rc.1",
+    "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
     "lodash": "^4.17.4",
-    "rxjs": "^5.4.1",
+    "rxjs": "^5.4.2",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.3",
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler-cli": "^4.3.1",
     "@types/jasmine": "2.5.53",
     "@types/node": "~8.0.4",
     "codelyzer": "~3.1.1",
@@ -47,6 +47,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.1.0",
     "tslint": "~5.4.3",
-    "typescript": "=2.3.4"
+    "typescript": "^2.4.2"
   }
 }
