--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.1",
-    "@angular/common": "^4.3.1",
-    "@angular/compiler": "^4.3.1",
-    "@angular/core": "^4.3.1",
-    "@angular/forms": "^4.3.1",
-    "@angular/http": "^4.3.1",
-    "@angular/platform-browser": "^4.3.1",
-    "@angular/platform-browser-dynamic": "^4.3.1",
-    "@angular/platform-server": "^4.3.1",
-    "@angular/router": "^4.3.1",
+    "@angular/animations": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/platform-server": "^4.3.6",
+    "@angular/router": "^4.3.6",
     "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
@@ -30,14 +30,14 @@
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.3",
-    "@angular/compiler-cli": "^4.3.1",
-    "@types/jasmine": "2.5.53",
-    "@types/node": "~8.0.4",
+    "@angular/cli": "^1.3.2",
+    "@angular/compiler-cli": "^4.3.6",
+    "@types/jasmine": "2.5.54",
     "@types/lodash": "^4.14.67",
+    "@types/node": "~8.0.4",
     "codelyzer": "~3.1.1",
-    "jasmine-core": "~2.6.4",
-    "jasmine-spec-reporter": "~4.1.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
@@ -45,8 +45,9 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~3.1.0",
-    "tslint": "~5.4.3",
+    "sw-precache": "^5.2.0",
+    "ts-node": "~3.3.0",
+    "tslint": "~5.7.0",
     "typescript": "^2.4.2"
   }
 }
