--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --aot",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,30 +13,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.1",
-    "@angular/common": "^5.0.1",
-    "@angular/compiler": "^5.0.1",
-    "@angular/core": "^5.0.1",
-    "@angular/forms": "^5.0.1",
-    "@angular/http": "^5.0.1",
-    "@angular/platform-browser": "^5.0.1",
-    "@angular/platform-browser-dynamic": "^5.0.1",
-    "@angular/platform-server": "^5.0.1",
-    "@angular/router": "^5.0.1",
-    "angularfire2": "^5.0.0-rc.3",
-    "core-js": "^2.4.1",
-    "firebase": "^4.4.0",
-    "lodash": "^4.17.4",
-    "rxjs": "^5.4.3",
-    "zone.js": "^0.8.17"
+    "@angular/animations": "^5.0.2",
+    "@angular/common": "^5.0.2",
+    "@angular/compiler": "^5.0.2",
+    "@angular/core": "^5.0.2",
+    "@angular/forms": "^5.0.2",
+    "@angular/http": "^5.0.2",
+    "@angular/platform-browser": "^5.0.2",
+    "@angular/platform-browser-dynamic": "^5.0.2",
+    "@angular/platform-server": "^5.0.2",
+    "@angular/router": "^5.0.2",
+    "angularfire2": "^5.0.0-rc.4",
+    "core-js": "^2.5.1",
+    "firebase": "^4.6.2",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
-    "@angular/compiler-cli": "^5.0.1",
-    "@types/jasmine": "2.5.54",
-    "@types/lodash": "^4.14.67",
-    "@types/node": "~8.0.4",
-    "codelyzer": "~3.1.1",
+    "@angular/cli": "^1.5.2",
+    "@angular/compiler-cli": "^5.0.2",
+    "@angular/language-service": "^5.0.2",
+    "@types/jasmine": "2.8.2",
+    "@types/node": "~8.0.53",
+    "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
@@ -45,11 +44,11 @@
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "~5.2.0",
     "sw-precache": "^5.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.3.0",
-    "tslint": "~5.7.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.4.2"
   }
 }
