--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "lib": [
       "es2016",
       "dom"
-    ]
+    ],
+    "strict": true
+  },
+  "angularCompilerOptions": {
+    "preserveWhitespaces": false
   }
 }
