--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.4.2"
+    "typescript": "~2.4.2"
   }
 }
