--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/pwa": "^0.6.1",
     "@angular/router": "^6.0.1",
     "@angular/service-worker": "^6.0.1",
-    "angularfire2": "^5.0.0-rc.8.1-next",
+    "angularfire2": "^5.0.0-rc.9",
     "core-js": "^2.5.4",
     "firebase": "^5.0.2",
     "rxjs": "^6.0.0",
