--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test --watch false",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:all": "ng build --prod && ng run firestarter:server && npm run webpack:prerender && npm run prerender",
+    "serve:prerender": "http-server dist/firestarter -c-1",
+    "webpack:prerender": "webpack --config webpack.prerender.config.js",
+    "prerender": "node dist/firestarter/prerender.js"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +27,7 @@
     "@angular/pwa": "^0.6.1",
     "@angular/router": "^6.0.1",
     "@angular/service-worker": "^6.0.1",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "angularfire2": "^5.0.0-rc.9",
     "core-js": "^2.5.4",
     "firebase": "^5.0.2",
@@ -39,6 +44,7 @@
     "@types/node": "~8.9.4",
     "bulma": "^0.7.1",
     "codelyzer": "~4.2.1",
+    "fs-extra": "^6.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -47,8 +53,12 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "ts-loader": "^4.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "webpack-cli": "^2.1.3",
+    "ws": "^5.1.1",
+    "xmlhttprequest": "^1.8.0"
   }
 }
