--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "~8.9.4",
     "bulma": "^0.7.1",
     "codelyzer": "~4.2.1",
+    "firebase-tools": "^3.18.6",
     "fs-extra": "^6.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
