--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "ng build --prod",
         "test": "ng test --watch false",
         "lint": "ng lint",
-        "e2e": "ng e2e",
+        "e2e": "cypress open",
         "build:all": "ng build --prod && ng run firestarter:server && npm run webpack:prerender && npm run prerender",
         "serve:prerender": "http-server dist/firestarter -c-1",
         "webpack:prerender": "webpack --config webpack.prerender.config.js",
@@ -39,11 +39,15 @@
         "@angular/cli": "~6.0.1",
         "@angular/compiler-cli": "^6.0.1",
         "@angular/language-service": "^6.0.1",
+        "@cypress/webpack-preprocessor": "^2.0.1",
+        "@types/chance": "^1.0.1",
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
         "bulma": "^0.7.1",
+        "chance": "^1.0.16",
         "codelyzer": "~4.2.1",
+        "cypress": "^3.0.1",
         "firebase-tools": "^3.18.6",
         "fs-extra": "^6.0.1",
         "jasmine-core": "~2.99.1",
