--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -5,7 +5,8 @@
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": true,
-    "target": "es6"
+    "target": "es6",
+    "typeRoots": ["./node_modules/@types"]
   },
   "compileOnSave": true,
   "include": [
