--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,8 @@
     "firebase-functions": "^1.0.1"
   },
   "devDependencies": {
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   },
   "private": true
 }
