--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,13 +1,16 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-    "lib": ["es6"],
+    "lib": ["es2017"],
     "module": "commonjs",
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": true,
-    "target": "es6"
+    "target": "es6",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
-  "compileOnSave": true,
   "include": [
     "src"
   ]
