--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ before_deploy:
 deploy:
   skip_cleanup: true
   provider: firebase
-  token:
-    secure: $FIREBASE_TOKEN_SECURE
+  token: $FIREBASE_TOKEN
 
 notifications:
   email:
