--- a/package.json
+++ b/package.json
@@ -1,69 +1,71 @@
 {
-    "name": "firestarter",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --prod",
-        "test": "ng test --watch false",
-        "lint": "ng lint",
-        "e2e": "cypress open",
-        "build:all": "ng build --prod && ng run firestarter:server && npm run webpack:prerender && npm run prerender",
-        "serve:prerender": "http-server dist/firestarter -c-1",
-        "webpack:prerender": "webpack --config webpack.prerender.config.js",
-        "prerender": "node dist/firestarter/prerender.js"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^6.0.1",
-        "@angular/common": "^6.0.1",
-        "@angular/compiler": "^6.0.1",
-        "@angular/core": "^6.0.1",
-        "@angular/forms": "^6.0.1",
-        "@angular/http": "^6.0.1",
-        "@angular/platform-browser": "^6.0.1",
-        "@angular/platform-browser-dynamic": "^6.0.1",
-        "@angular/platform-server": "^6.0.1",
-        "@angular/pwa": "^0.6.1",
-        "@angular/router": "^6.0.1",
-        "@angular/service-worker": "^6.0.1",
-        "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
-        "angularfire2": "^5.0.0-rc.9",
-        "core-js": "^2.5.4",
-        "firebase": "^5.0.2",
-        "rxjs": "^6.0.0",
-        "zone.js": "^0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.6.1",
-        "@angular/cli": "~6.0.1",
-        "@angular/compiler-cli": "^6.0.1",
-        "@angular/language-service": "^6.0.1",
-        "@cypress/webpack-preprocessor": "^2.0.1",
-        "@types/chance": "^1.0.1",
-        "@types/jasmine": "~2.8.6",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "~8.9.4",
-        "bulma": "^0.7.1",
-        "chance": "^1.0.16",
-        "codelyzer": "~4.2.1",
-        "cypress": "^3.0.1",
-        "firebase-tools": "^3.18.6",
-        "fs-extra": "^6.0.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~1.7.1",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~1.4.2",
-        "karma-jasmine": "~1.1.1",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.3.0",
-        "ts-loader": "^4.3.0",
-        "ts-node": "~5.0.1",
-        "tslint": "~5.9.1",
-        "typescript": "~2.7.2",
-        "webpack-cli": "^2.1.3",
-        "ws": "^5.1.1",
-        "xmlhttprequest": "^1.8.0"
-    }
+  "name": "firestarter",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test --watch false",
+    "lint": "ng lint",
+    "e2e": "cypress open",
+    "build:all": "ng build --prod && ng run firestarter:server && npm run webpack:prerender && npm run prerender",
+    "serve:prerender": "http-server dist/firestarter -c-1",
+    "webpack:prerender": "webpack --config webpack.prerender.config.js",
+    "prerender": "node dist/firestarter/prerender.js"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^7.0.1",
+    "@angular/cdk": "^7.0.1",
+    "@angular/common": "^7.0.1",
+    "@angular/compiler": "^7.0.1",
+    "@angular/core": "^7.0.1",
+    "@angular/fire": "^5.1.0",
+    "@angular/forms": "^7.0.1",
+    "@angular/http": "^7.0.1",
+    "@angular/material": "^7.0.1",
+    "@angular/platform-browser": "^7.0.1",
+    "@angular/platform-browser-dynamic": "^7.0.1",
+    "@angular/platform-server": "^7.0.1",
+    "@angular/pwa": "^0.6.1",
+    "@angular/router": "^7.0.1",
+    "@angular/service-worker": "^7.0.1",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "core-js": "^2.5.4",
+    "firebase": "^5.5.6",
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular/cli": "~7.0.2",
+    "@angular/compiler-cli": "^7.0.1",
+    "@angular/language-service": "^7.0.1",
+    "@cypress/webpack-preprocessor": "^2.0.1",
+    "@types/chance": "^1.0.1",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "bulma": "^0.7.1",
+    "chance": "^1.0.16",
+    "codelyzer": "~4.2.1",
+    "cypress": "^3.0.1",
+    "firebase-tools": "^5.1.1",
+    "fs-extra": "^6.0.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.3.0",
+    "ts-loader": "^4.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~3.1.3",
+    "webpack-cli": "^2.1.3",
+    "ws": "^5.1.1",
+    "xmlhttprequest": "^1.8.0"
+  }
 }
