--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@angular/router": "^7.0.1",
     "@angular/service-worker": "^7.0.1",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@schematics/angular": "^7.0.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.6",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
