fix team selection & added security rules

--- a/firebase.json
+++ b/firebase.json
@@ -14,14 +14,7 @@
       }]
     }]
   },
-  "database": {
-    "rules": "database.rules.json"
-  },
   "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "storage": {
-    "rules": "storage.rules"
+    "rules": "firestore.rules"
   }
 }
