--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@angular/pwa": "^0.10.3",
     "@angular/router": "^7.0.1",
     "@angular/service-worker": "^7.0.1",
+    "@azure/msal-angular": "^0.1.2",
     "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "@schematics/angular": "^7.0.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.6",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
