--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "~5.12.0",
+    "firebase-admin": "^6.4.0",
     "firebase-functions": "^2.1.0"
   },
   "devDependencies": {
