service worker update fix & fix seasonId for player quests/points

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -2,7 +2,7 @@
   "index": "/index.html",
   "assetGroups": [{
     "name": "app",
-    "installMode": "prefetch",
+    "installMode": "lazy",
     "resources": {
       "files": [
         "/favicon.ico",
@@ -14,7 +14,6 @@
   }, {
     "name": "assets",
     "installMode": "lazy",
-    "updateMode": "prefetch",
     "resources": {
       "files": [
         "/assets/**"
