Changed NotifyService to use snackbar

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -2,7 +2,7 @@
   "index": "/index.html",
   "assetGroups": [{
     "name": "app",
-    "installMode": "lazy",
+    "installMode": "prefetch",
     "resources": {
       "files": [
         "/favicon.ico",
