--- a/package.json
+++ b/package.json
@@ -15,60 +15,72 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.1",
-    "@angular/cdk": "^7.0.1",
-    "@angular/common": "^7.0.1",
-    "@angular/compiler": "^7.0.1",
-    "@angular/core": "^7.0.1",
-    "@angular/fire": "^5.1.0",
-    "@angular/forms": "^7.0.1",
-    "@angular/http": "^7.0.1",
-    "@angular/material": "^7.0.1",
-    "@angular/platform-browser": "^7.0.1",
-    "@angular/platform-browser-dynamic": "^7.0.1",
-    "@angular/platform-server": "^7.0.1",
-    "@angular/pwa": "^0.10.3",
-    "@angular/router": "^7.0.1",
-    "@angular/service-worker": "^7.0.1",
+    "@angular/animations": "^7.2.6",
+    "@angular/cdk": "^7.3.3",
+    "@angular/common": "^7.2.6",
+    "@angular/compiler": "^7.2.6",
+    "@angular/core": "^7.2.6",
+    "@angular/fire": "^5.1.1",
+    "@angular/forms": "^7.2.6",
+    "@angular/http": "^7.2.6",
+    "@angular/material": "^7.3.3",
+    "@angular/platform-browser": "^7.2.6",
+    "@angular/platform-browser-dynamic": "^7.2.6",
+    "@angular/platform-server": "^7.2.6",
+    "@angular/pwa": "^0.10.7",
+    "@angular/router": "^7.2.6",
+    "@angular/service-worker": "^7.2.6",
     "@azure/msal-angular": "^0.1.2",
-    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
-    "@schematics/angular": "^7.0.3",
-    "core-js": "^2.5.4",
-    "firebase": "^5.5.6",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
+    "@schematics/angular": "^7.3.3",
+    "buffer": "^5.2.1",
+    "core-js": "^2.6.5",
+    "firebase": "^5.8.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "^7.0.1",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular/compiler-cli": "^7.2.6",
     "@cypress/webpack-preprocessor": "^2.0.1",
     "@types/chance": "^1.0.1",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
-    "bulma": "^0.7.1",
-    "chance": "^1.0.16",
+    "bulma": "^0.7.4",
+    "chance": "^1.0.18",
     "codelyzer": "~4.2.1",
-    "cypress": "^3.0.1",
+    "cypress": "^3.1.5",
     "firebase-tools": "^5.1.1",
     "fs-extra": "^6.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
-    "ts-loader": "^4.3.0",
+    "ts-loader": "^4.5.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.1.3",
-    "webpack-cli": "^2.1.3",
-    "ws": "^5.1.1",
+    "typescript": "^3.3.3333",
+    "webpack-cli": "^2.1.5",
+    "ws": "^5.2.2",
     "xmlhttprequest": "^1.8.0"
+  },
+  "browser": {
+    "zlib": false,
+    "http": false,
+    "https": false,
+    "net": false,
+    "path": false,
+    "stream": false,
+    "tls": false,
+    "fs": false,
+    "crypto": false,
+    "global": false
   }
 }
