--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "ts-loader": "^4.5.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.3.3333",
+    "typescript": "3.1.6",
     "webpack-cli": "^2.1.5",
     "ws": "^5.2.2",
     "xmlhttprequest": "^1.8.0"
