--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.2",
+	   "@angular/animations": "^7.0.2",
+    "@angular/cdk": "~7.3.4",
     "@angular/common": "^7.0.2",
     "@angular/compiler": "^7.0.2",
     "@angular/core": "^7.0.2",
     "@angular/fire": "^5.1.0",
     "@angular/forms": "^7.0.2",
     "@angular/http": "^7.0.2",
+    "@angular/material": "^7.3.4",
     "@angular/platform-browser": "^7.0.2",
     "@angular/platform-browser-dynamic": "^7.0.2",
     "@angular/platform-server": "^7.0.2",
@@ -30,13 +32,15 @@
     "@angular/service-worker": "^7.0.2",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "core-js": "^2.5.4",
-    "firebase": "^5.5.6",
+    "firebase": "^5.9.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
-  },
+
+},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~7.0.3",
+    "@angular-devkit/build-angular": "^0.13.5",
+    "@angular/cli": "^7.3.5",
     "@angular/compiler-cli": "^7.0.2",
     "@angular/language-service": "^7.0.2",
     "@cypress/webpack-preprocessor": "^2.0.1",
@@ -48,7 +52,7 @@
     "chance": "^1.0.16",
     "codelyzer": "~4.2.1",
     "cypress": "^3.0.1",
-    "firebase-tools": "^3.18.6",
+    "firebase-tools": "^6.5.0",
     "fs-extra": "^6.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -65,5 +69,6 @@
     "webpack-cli": "^2.1.3",
     "ws": "^5.1.1",
     "xmlhttprequest": "^1.8.0"
+
   }
 }
