--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.9.0",
     "hammerjs": "^2.0.8",
+    "primeng": "^7.1.0",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
   },
