--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.9.0",
+    "gixng-buttons": "^0.2.17",
     "hammerjs": "^2.0.8",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.0",
