--- a/bin/firestarter-base/package.json
+++ b/bin/firestarter-base/package.json
@@ -4,9 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 4200 --disableHostCheck ",
-    "build": "ng build --prod",    
+    "build": "ng build --prod",
     "test": "ng test --watch false",
-    "test:watch": "ng test --watch false",
     "lint": "ng lint",
     "e2e": "cypress open",
     "build:all": "ng build --prod && ng run firestarter:server && npm run webpack:prerender && npm run prerender",
@@ -15,9 +14,8 @@
     "prerender": "node dist/firestarter/prerender.js",
     "dk:build:base": "cp -f package.json ./bin/firestarter-base/ ; docker build -t firestarter-base ./bin/firestarter-base/",
     "dk:build": "docker build -t firestarter .",
-    "dk:build:test": "docker build -t firestarter-test tests/",
+    "dk:build:test": "docker build -t firestarter-test .",
     "dk:run-fg": "docker run -it  -v ${PWD}:/usr/src/app  -v /usr/src/app/node_modules   -p 4200:4200   --rm   firestarter",
-    "dk:run-fg:test": "docker run -it  -v ${PWD}:/usr/src/app  -v /usr/src/app/node_modules   -p 9876:9876   --rm   firestarter-test",
     "dk:run-bg": "yarn dk:stop;docker run -d  -v ${PWD}:/usr/src/app -v /usr/src/app/node_modules -p 4200:4200 --name   firestarter-container firestarter",
     "dk:run": "npm run dk:run-bg",
     "dk:stop": "docker stop firestarter-container;docker rm firestarter-container"
