--- a/package.json
+++ b/package.json
@@ -9,71 +9,75 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "serve": "node serve-script",
-    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "serve:ssr": "node dist/server",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run firestarter:server:production",
     "build:prerender": "npm run build:client-and-server-bundles && node prerender.js",
-    "serve:prerender": "http-server dist/browser -c-1"
+    "serve:prerender": "http-server dist/browser -c-1",
+    "compile:server_bak": "webpack --config webpack.server.config.js --progress --colors",
+    "build:ssr_bak": "npm run build:client-and-server-bundles && npm run compile:server",
+    "serve:ssr_bak": "node dist/server",
+    "build:client-and-server-bundles_bak": "ng build --prod && ng run firestarter:server:production",
+    "dev:ssr": "ng run firestarter:serve-ssr",
+    "serve:ssr": "node dist/server/main.js",
+    "build:ssr": "ng build --prod && ng run firestarter:server:production",
+    "prerender": "ng run firestarter:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.3",
-    "@angular/cdk": "~8.1.4",
-    "@angular/common": "~8.2.3",
-    "@angular/compiler": "~8.2.3",
-    "@angular/core": "~8.2.3",
-    "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.2.3",
-    "@angular/material": "^8.1.4",
-    "@angular/platform-browser": "~8.2.3",
-    "@angular/platform-browser-dynamic": "~8.2.3",
-    "@angular/platform-server": "~8.2.3",
-    "@angular/pwa": "^0.803.2",
-    "@angular/router": "~8.2.3",
-    "@angular/service-worker": "~8.2.3",
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/ng-universal": "^2.0.1",
-    "@nestjs/platform-express": "^6.0.0",
-    "@nguniversal/express-engine": "^8.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^8.0.0",
-    "firebase": ">= 5.5.7 <7",
-    "hammerjs": "^2.0.8",
+    "@angular/animations": "~9.0.1",
+    "@angular/cdk": "~9.0.0",
+    "@angular/common": "~9.0.1",
+    "@angular/compiler": "~9.0.1",
+    "@angular/core": "~9.0.1",
+    "@angular/fire": "^5.4.2",
+    "@angular/forms": "~9.0.1",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "~9.0.1",
+    "@angular/platform-browser-dynamic": "~9.0.1",
+    "@angular/platform-server": "~9.0.1",
+    "@angular/router": "~9.0.1",
+    "@angular/service-worker": "~9.0.1",
+    "@nestjs/common": "^6.11.6",
+    "@nestjs/core": "^6.11.6",
+    "@nestjs/ng-universal": "^3.0.0",
+    "@nestjs/platform-express": "^6.11.6",
+    "@nguniversal/express-engine": "^9.0.0",
+    "express": "^4.15.2",
+    "firebase": "7.8.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.0",
-    "@angular/cli": "~8.3.0",
-    "@angular/compiler-cli": "~8.2.3",
-    "@angular/language-service": "~8.2.3",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.1",
+    "@angular/language-service": "~9.0.1",
+    "@nguniversal/builders": "^9.0.0",
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.5.3",
+    "@types/jasminewd2": "~2.0.8",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "nodemon": "^1.18.11",
-    "protractor": "~5.4.0",
-    "rimraf": "^2.6.3",
-    "ts-loader": "^5.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "firebase-tools": "^6.10.0",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "nodemon": "^2.0.2",
+    "protractor": "~5.4.3",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^6.2.1",
+    "ts-node": "~8.6.2",
+    "tslint": "~6.0.0",
+    "typescript": "~3.7.5",
+    "@angular-devkit/architect": "0.900.2",
+    "firebase-tools": "^7.13.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "wait-on": "^3.2.0",
-    "webpack-cli": "^3.1.0"
+    "inquirer": "^7.0.4",
+    "inquirer-autocomplete-prompt": "^1.0.2",
+    "wait-on": "^4.0.0",
+    "webpack-cli": "^3.3.11"
   }
 }
